# code-prism

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_SNIPPET_FEATURE.md  README.md  package.json  pnpm-lock.yaml  skills-src  test-code-snippet.sh  test-extract-snippet.go
.cursor/rules/: backend-api.mdc  change-control.mdc  database.mdc  frontend.mdc  observability.mdc  testing.mdc
apps/admin/: next.config.js  package.json
apps/monitor/: next.config.js  package.json
apps/user/: package.json
docs/: PRD_业务需求文档_v1.0.md  repo-webhook.md
docs/api-contracts/: README.md  sse-chat-events.md
docs/chats/: 00.项目约束及rule生成cursor_lingprism_ai_agent_guidelines.md  (+19 more)
scripts/: verify-ports.sh
services/ai-worker/: .env.example  celery_app.py  pyproject.toml
services/ai-worker/chains/: __init__.py  arch_gen.py  context_anchor.py  doc_gen.py  intent_rules.py  qa_router.py  rag_retrieval.py  simple_qa.py  symbol_query.py  template_match.py
services/ai-worker/infrastructure/: config.py  langfuse_tracer.py  qdrant_collections.py
services/ai-worker/infrastructure/clients/: __init__.py  core.py  qdrant.py
services/ai-worker/infrastructure/llm/: __init__.py  config.py  factory.py  streaming.py
services/ai-worker/infrastructure/llm/providers/: __init__.py  registry.py
services/ai-worker/internal_http/: server.py
services/ai-worker/scripts/: __init__.py  reindex_knowledge.py  smoke_llm.py
services/ai-worker/tests/: test_arch_gen.py  test_config.py  test_context_anchor.py  test_doc_gen.py  test_doc_stream.py  test_factory.py  test_internal_http.py  test_llm_config.py  test_ping.py  test_qa_router.py  test_qdrant_client.py  test_qdrant_collections.py  test_rag_retrieval.py  test_rag_score.py  test_simple_qa.py  test_streaming.py  test_template_match.py  test_workflow.py
services/ai-worker/workers/: gen_training_doc.py  index_embed.py  ping.py
services/ai-worker/workflow/: __init__.py  deps.py  graph.py  state.py
services/ai-worker/workflow/nodes/: context.py  generate.py  grounding.py  intent.py  rag.py  response.py  security.py  symbol_resolve.py  template.py
services/indexer/: .env.example  Cargo.toml
services/indexer/proto/indexer/v1/: indexer.proto
services/indexer/src/: main.rs
services/indexer/src/graph/: mod.rs
services/indexer/src/output/: mod.rs
services/indexer/src/parser/: mod.rs
services/mcp/: .env.example  pyproject.toml
services/mcp/clients/: lingprism_api.py
services/mcp/server/: app.py  transport.py
services/mcp/server/handlers/: initialize.py  tools_call.py  tools_list.py
services/mcp/server/middleware/: audit.py  auth.py
services/mcp/tests/: test_mcp.py
services/mcp/tools/: __init__.py  ask_question.py  echo.py  get_architecture.py  search_code.py  search_knowledge.py
(+251 files in other folders)
