[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingprism-mcp"
version = "0.1.0"
description = "LingPrism MCP 2025 Streamable HTTP service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
lingprism-mcp = "server.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["server", "tools", "clients"]
